# cardinal

./: README.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/CardinalLib/: CMakeLists.txt  app.cpp  app.h  qemu_core.cpp  qemu_core.h  shell.cpp  shell.h
